<resources>
    <string name="app_name">RapidRoad</string>

    <string name="faq_desc">
        anda dapat mengirimkan dengan menghubungi kami melalui whatsapp. isilah kolom dibawah ini dengan pertanyaan yang anda akan ajukan.
        tombol akan otomatis mengarahkan ke kontak kami di whatsapp.
    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">welcome\nback</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="lupa_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">don\'t have account</string>
    <string name="daftar">sign up</string>
    <string name="dashboard">Dashboard</string>
    <string name="maps">Maps</string>
    <string name="profile">Profile</string>
    <string name="register">Register</string>
    <string name="username">username</string>
    <string name="already_have_account">already have account?</string>
    <string name="nama_user">nama user</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="ubah_password">ubah password</string>
    <string name="laporan_dibuat">laporan dibuat \n 3</string>
    <string name="laporan_selesai">laporan selesai \n 1</string>
    <string name="kirim_pertanyaan_ke_whatsapp">kirim pertanyaan ke whatsapp</string>
    <string name="password_lama">password lama</string>
    <string name="password_baru">password baru</string>
    <string name="konfirmasi_password_baru">konfirmasi password baru</string>
    <string name="story_image_description">Story image description</string>
    <string name="pelapor_john_doe">Pelapor: John Doe</string>
    <string name="tanggal_22_04_2003">Tanggal: 22-04-2003</string>
    <string name="deskripsi">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</string>
    <string name="Lokasi">Lokasi: Jl.Kapuas no 12, Jember</string>
    <string name="rusak"> Status: rusak</string>
    <string name="description">Deskripsi</string>
    <string name="upload">Laporkan</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galery</string>
</resources>