<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:iconTint="@color/colorPrimary"
        app:showAsAction="always"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/menu_maps"
        android:icon="@drawable/ic_map"
        android:iconTint="@color/colorPrimary"
        app:showAsAction="always"
        android:title="@string/maps" />
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_person"
        android:iconTint="@color/colorPrimary"
        app:showAsAction="always"
        android:title="@string/profile" />
</menu>