<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/tv_welcome_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="30sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_app_name"/>

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:fontFamily="@font/poppins_black"
        android:textColor="@color/black"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_back"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"/>

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/bg_cv_login"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:id="@+id/tv_email_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:textSize="20sp"
            android:autoSizeMinTextSize="18sp"
            android:alpha="0"
            tools:alpha="100"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout_email_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:boxBackgroundColor="@color/colorPrimaryVariant"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/baseline_email_24"
            android:alpha="0"
            tools:alpha="100">

            <com.example.rapidroad.components.CustomEditTextEmail
                android:id="@+id/et_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:textSize="20sp"
            android:autoSizeMinTextSize="18sp"
            android:alpha="0"
            tools:alpha="100"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout_password_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:boxBackgroundColor="@color/colorPrimaryVariant"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/baseline_lock_24"
            android:alpha="0"
            tools:alpha="100">

            <com.example.rapidroad.components.CustomEditTextPassword
                android:id="@+id/et_password_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_lupa_password"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lupa_password"
            android:textAllCaps="false"
            android:layout_gravity="end"
            android:textColor="@color/colorPrimaryVariant"
            android:fontFamily="@font/poppins_medium"
            android:alpha="0"
            tools:alpha="100"/>

        <com.example.rapidroad.components.CustomButtonLogin
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_medium"
            android:alpha="0"
            tools:alpha="100"/>


        <LinearLayout
            android:id="@+id/ll_register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:alpha="0"
            tools:alpha="100">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="50dp"
                android:text="@string/dont_have_account"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_register_login"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/daftar"
                android:textAllCaps="false"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/poppins_medium_italic"
                android:textStyle="bold"/>
        </LinearLayout>


    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>