<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryVariant"
    tools:context=".view.fragment.ProfileFragment">

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guide_line_horizontal_profile"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_user_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_image_profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_user_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    tools:src="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_user_name_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:drawableStart="@drawable/ic_person"
                android:drawableTint="@color/colorOnPrimary"
                android:textAlignment="center"
                android:text="@string/nama_user"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@+id/cv_image_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_user_email_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawableTint="@color/colorOnPrimary"
                android:textAlignment="center"
                android:text="@string/email"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_name_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


            <Button
                android:id="@+id/btn_ubah_password_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/ubah_password"
                android:backgroundTint="@color/colorPrimary"
                style="@style/Widget.Material3.Button"
                app:cornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_email_profile"
                app:layout_constraintEnd_toStartOf="@+id/btn_faq_profile"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/btn_faq_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/faq"
                android:backgroundTint="@color/light_gray"
                android:textColor="@color/colorPrimary"
                style="@style/Widget.Material3.Button.TonalButton"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_ubah_password_profile"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_email_profile"/>


            <Button
                android:id="@+id/btn_logout_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/logout"
                android:fontFamily="@font/poppins_medium"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:textColor="@color/colorPrimary"
                app:strokeColor="@color/colorPrimary"
                app:cornerRadius="10dp"
                app:strokeWidth="2dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_ubah_password_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>
    
    <TextView
        android:id="@+id/tv_count_report_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/laporan_dibuat"
        android:textAlignment="center"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_count_report_finished_profile"
        app:layout_constraintTop_toBottomOf="@+id/cv_user_profile"/>


    <TextView
        android:id="@+id/tv_count_report_finished_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/laporan_selesai"
        android:textAlignment="center"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_count_report_profile"
        app:layout_constraintTop_toBottomOf="@+id/cv_user_profile"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_horizontal_profile"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>